# progetto_fabio

./: .gitignore  pyproject.toml
Notebooks/: GIUSTOOOO.ipynb  Prova 1.ipynb  kmz.ipynb  mappa_melanesia_clean.html  mappa_melanesia_invertita.html  prova.ipynb
dati_fabio/: Labial-velars- DALV (1).csv  Labial-velars- Labial-velar released stops (1).csv  Labial-velars- Non-Austronesian DALV (1).csv  Labial-velars- Non-Austronesian released.csv  Labial-velars.kmz
