[project]
name = "progetto-fabio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "contextily>=1.7.0",
    "geodatasets>=2026.1.0",
    "geopandas>=1.1.3",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.9",
    "pandas>=3.0.2",
    "polars>=1.40.1",
    "pyarrow>=24.0.0",
]
